--- a/res/layout/repeat.xml
+++ b/res/layout/repeat.xml
@@ -17,7 +17,10 @@
 </LinearLayout>
 <LinearLayout android:id="@+id/LinearLayout07" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/daySaveButton" android:layout_weight="1" android:text="@string/save" android:layout_gravity="bottom"></Button>
 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayCancelButton" android:layout_weight="1" android:text="@string/cancel" android:layout_gravity="bottom"></Button>
-</LinearLayout></LinearLayout><LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/repeat_weekly" android:orientation="vertical"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
+</LinearLayout></LinearLayout>
+<ScrollView android:id="@+id/repeat_weekly" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="0">
+<LinearLayout android:layout_width="fill_parent" android:id="@+id/layout_weekly" android:orientation="vertical" android:layout_height="fill_parent">
+<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
 <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekEdit" android:maxWidth="150px" android:text="1"></EditText>
 
@@ -39,9 +42,10 @@
 </LinearLayout>
 </LinearLayout>
 </LinearLayout>
-<LinearLayout android:id="@+id/LinearLayout07" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekSaveButton" android:layout_weight="1" android:text="@string/save" android:layout_gravity="bottom"></Button>
+<TextView android:id="@+id/TextView06" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView><LinearLayout android:id="@+id/LinearLayout07" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekSaveButton" android:layout_weight="1" android:text="@string/save" android:layout_gravity="bottom"></Button>
 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekCancelButton" android:layout_weight="1" android:text="@string/cancel" android:layout_gravity="bottom"></Button>
-</LinearLayout></LinearLayout>
+</LinearLayout>
+</LinearLayout></ScrollView>
 
 <LinearLayout android:id="@+id/repeat_monthly" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
