--- a/res/layout/account_edit.xml
+++ b/res/layout/account_edit.xml
@@ -18,7 +18,10 @@
 </TableRow>
 <TableRow android:layout_height="wrap_content" android:id="@+id/BalanceRow" android:layout_width="fill_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BalanceLabel" android:text="@string/acct_bal" android:minWidth="100px"></TextView>
 <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BalanceEdit" android:layout_marginLeft="10px" android:layout_weight="2" android:singleLine="true"></EditText>
+</TableRow><TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/PriorityRow"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="100px" android:id="@+id/PriorityLabel" android:text="@string/acct_priority"></TextView>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_weight="2" android:singleLine="true" android:id="@+id/PriorityEdit"></EditText>
 </TableRow>
+
 </TableLayout>
 <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/SaveButton" android:text="@string/save" android:layout_weight="1"></Button>
 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/CancelButton" android:text="@string/cancel" android:layout_weight="1"></Button>
