--- a/res/layout/repeat.xml
+++ b/res/layout/repeat.xml
@@ -9,7 +9,7 @@
 <LinearLayout android:id="@+id/repeat_daily" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
 <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
-<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayEdit" android:maxWidth="150px" android:text="1" android:singleLine="true"></EditText>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayEdit" android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
 
 <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:paddingLeft="5px" android:text="Day(s)"></TextView>
 </LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="End On:" android:layout_gravity="center_vertical"></TextView>
@@ -22,7 +22,7 @@
 <LinearLayout android:layout_width="fill_parent" android:id="@+id/layout_weekly" android:orientation="vertical" android:layout_height="fill_parent">
 <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
-<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekEdit" android:maxWidth="150px" android:text="1" android:singleLine="true"></EditText>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekEdit" android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
 
 <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:paddingLeft="5px" android:text="Week(s)"></TextView>
 </LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="End On:" android:layout_gravity="center_vertical"></TextView>
@@ -49,7 +49,7 @@
 
 <LinearLayout android:id="@+id/repeat_monthly" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
-<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/monthEdit" android:maxWidth="150px" android:text="1" android:singleLine="true"></EditText>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/monthEdit" android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
 
 <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:text="Month(s)" android:paddingLeft="5px"></TextView>
 </LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="End On:" android:layout_gravity="center_vertical"></TextView>
@@ -63,7 +63,7 @@
 </LinearLayout></LinearLayout>
 <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/repeat_yearly" android:orientation="vertical"><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
 <TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Every:" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
-<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/yearEdit" android:maxWidth="150px" android:text="1" android:singleLine="true"></EditText>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/yearEdit" android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
 
 <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:paddingLeft="5px" android:text="Year(s)"></TextView>
 </LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="End On:" android:layout_gravity="center_vertical"></TextView>
