--- a/res/layout/account_edit.xml
+++ b/res/layout/account_edit.xml
@@ -6,7 +6,7 @@
 <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/NameEdit" android:layout_marginLeft="10px" android:layout_weight="2" android:inputType="textCapWords" android:hint="@string/acct_name"></EditText>
 </TableRow>
 <TableRow android:layout_height="wrap_content" android:id="@+id/BalanceRow" android:layout_width="fill_parent"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BalanceLabel" android:text="@string/acct_bal" android:minWidth="100px"></TextView>
-<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BalanceEdit" android:layout_marginLeft="10px" android:layout_weight="2" android:inputType="numberDecimal" android:hint="@string/acct_bal"></EditText>
+<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/BalanceEdit" android:layout_marginLeft="10px" android:layout_weight="2" android:hint="@string/acct_bal" android:inputType="numberDecimal"></EditText>
 </TableRow><TableRow android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/PriorityRow"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="100px" android:id="@+id/PriorityLabel" android:text="@string/acct_priority"></TextView>
 <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_weight="2" android:id="@+id/PriorityEdit" android:inputType="number" android:hint="@string/acct_priority"></EditText>
 </TableRow>
