--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -5,24 +5,26 @@
 <PreferenceScreen android:summary="About Loot, contact info, etc." android:key="about" android:title="About">
 <intent android:action="android.intent.action.VIEW" android:data="http://gumbercules.net/loot/about.html"/>
 
-</PreferenceScreen><CheckBoxPreference android:defaultValue="false" android:title="Colors" android:key="color" android:summary="Display transactions in color based on type."></CheckBoxPreference><CheckBoxPreference android:key="update" android:title="Update Checker" android:summary="Check for updates when the application launches." android:defaultValue="false"></CheckBoxPreference><PreferenceCategory android:title="Security" android:key="cat_security">
+</PreferenceScreen>
+<PreferenceScreen android:key="loot_premium" android:summary="More settings for the Loot premium version." android:title="Extra Settings">
+<Preference android:key="premium_enabled" android:enabled="true" android:title="@string/premium_disabled_title" android:summary="@string/premium_disabled_body">
+<intent android:action="android.intent.action.VIEW" android:data="market://search?q=net.gumbercules.loot.premium"/>
+</Preference>
+<EditTextPreference android:summary="Color to paint a withdraw transaction." android:dialogTitle="Withdraw Color" android:dialogMessage="Color to paint a withdraw transaction." android:title="Withdraw Color" android:key="color_withdraw"></EditTextPreference>
+<EditTextPreference android:summary="Color to paint a budgeted withdraw transaction." android:dialogTitle="Budget Withdraw Color" android:dialogMessage="Color to paint a budgeted withdraw transaction." android:title="Budget Withdraw Color" android:key="color_budget_withdraw"></EditTextPreference>
+<EditTextPreference android:summary="Color to paint a deposit transaction." android:dialogTitle="Deposit Color" android:dialogMessage="Color to paint a deposit transaction." android:title="Deposit Color" android:key="color_deposit"></EditTextPreference>
+<EditTextPreference android:summary="Color to paint a budgeted deposit transaction." android:dialogTitle="Budget Deposit Color" android:dialogMessage="Color to paint a budgeted deposit transaction." android:title="Budget Deposit Color" android:key="color_budget_deposit"></EditTextPreference>
+<EditTextPreference android:summary="Color to paint a check transaction." android:dialogTitle="Check Color" android:dialogMessage="Color to paint a check transaction." android:title="Check Color" android:key="color_check"></EditTextPreference>
+<EditTextPreference android:summary="Color to paint a budgeted check transaction." android:dialogTitle="Budget Check Color" android:dialogMessage="Color to paint a budgeted check transaction." android:title="Budget Check Color" android:key="color_budget_check"></EditTextPreference>
+
+</PreferenceScreen>
+<CheckBoxPreference android:defaultValue="false" android:title="Colors" android:key="color" android:summary="Display transactions in color based on type."></CheckBoxPreference><PreferenceCategory android:title="Security" android:key="cat_security">
 <CheckBoxPreference android:key="security" android:title="Security" android:defaultValue="false" android:disableDependentsState="false" android:summary="Use a PIN to access accounts."></CheckBoxPreference><EditTextPreference android:dialogTitle="PIN" android:title="PIN" android:key="pin" android:positiveButtonText="Set" android:negativeButtonText="Cancel" android:defaultValue="0000" android:dependency="security" android:summary="Password to access accounts." android:dialogMessage="Enter new PIN:"></EditTextPreference></PreferenceCategory>
 <PreferenceCategory android:title="Transaction Purging" android:key="cat_purge"><CheckBoxPreference android:key="purge" android:title="Auto Purge" android:defaultValue="false" android:disableDependentsState="false" android:summary="Automatically purge posted transactions."></CheckBoxPreference><EditTextPreference android:dialogTitle="Auto Purge" android:dialogMessage="Purge posted transactions after how many days?" android:key="purge_days" android:positiveButtonText="Set" android:negativeButtonText="Cancel" android:defaultValue="90" android:dependency="purge" android:title="Purge Days" android:summary="Number of days before purging."></EditTextPreference></PreferenceCategory>
-
-
 <PreferenceCategory android:title="Repeating Transactions" android:key="cat_repeat"><CheckBoxPreference android:key="repeat" android:defaultValue="true" android:title="Show Repeats Early" android:disableDependentsState="false" android:summary="Show repeating transactions before the recorded day."></CheckBoxPreference><EditTextPreference android:dialogTitle="Early Days" android:dialogMessage="Show transactions how many days before the transaction date?" android:positiveButtonText="Set" android:negativeButtonText="Cancel" android:key="repeat_days" android:title="Days Before Display" android:dependency="repeat" android:defaultValue="2" android:summary="Days before the repeated transaction is shown."></EditTextPreference>
 </PreferenceCategory>
-
-
-
-
-
-
 <PreferenceCategory android:title="Locale" android:key="cat_locale"><CheckBoxPreference android:title="Override Locale Settings" android:key="override_locale" android:summary="Set locale independently of your global settings." android:defaultValue="false"></CheckBoxPreference>
-
-
-
-
 <ListPreference android:key="locale_list" android:summary="Locale to use instead of the system-detected one." android:title="Locale" android:dependency="override_locale" android:defaultValue="0"></ListPreference>
 </PreferenceCategory>
+
 </PreferenceScreen>
