--- a/res/layout/accounts.xml
+++ b/res/layout/accounts.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" android:orientation="vertical">
-
-
-
-
-
-
-
-<ListView android:layout_height="wrap_content" android:id="@android:id/list" android:layout_width="fill_parent" android:layout_weight="100" android:paddingRight="5px"></ListView>
-
-
-
-<TextView android:id="@android:id/empty" android:textSize="24px" android:text="Use the menu to add new accounts." android:gravity="center" android:layout_height="fill_parent" android:layout_width="fill_parent"></TextView>
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:orientation="vertical">
+	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
+		android:layout_width="fill_parent" android:layout_weight="100"
+		android:paddingRight="5px"></ListView>
+	<TextView android:id="@android:id/empty" android:textSize="24px"
+		android:text="Use the menu to add new accounts." android:gravity="center"
+		android:layout_height="fill_parent" android:layout_width="fill_parent"></TextView>
 </LinearLayout>
