--- a/res/layout/pin.xml
+++ b/res/layout/pin.xml
@@ -1,17 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" android:orientation="vertical">
-
-<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/pin" android:gravity="center_horizontal" android:textSize="16px"></TextView>
-<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal" android:id="@+id/invalidView" android:textSize="24px" android:textStyle="bold" android:textColor="#ff0000"></TextView><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="40px" android:layout_marginRight="40px" android:id="@+id/pinEdit" android:gravity="center" android:state_enabled="false" android:clickable="false" android:focusable="false" android:focusableInTouchMode="false" android:inputType="textPassword"></EditText>
-<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="15px" android:layout_marginRight="15px"><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:text="1" android:tag="1" android:typeface="normal" android:height="65px" android:textSize="24px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:id="@+id/Button02" android:tag="2" android:text="2" android:typeface="normal" android:height="65px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:tag="3" android:text="3" android:typeface="normal" android:id="@+id/Button03" android:height="65px"></Button>
-</TableRow><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:tag="4" android:text="4" android:id="@+id/Button04" android:height="65px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:id="@+id/Button05" android:tag="5" android:text="5" android:height="65px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:tag="6" android:text="6" android:id="@+id/Button06" android:height="65px"></Button>
-</TableRow><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:id="@+id/Button07" android:tag="7" android:text="7" android:height="65px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:text="8" android:tag="8" android:id="@+id/Button08" android:height="65px"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:id="@+id/Button09" android:tag="9" android:text="9" android:height="65px"></Button>
-</TableRow><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="" android:visibility="invisible" android:id="@+id/ButtonHolder"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:text="0" android:tag="0" android:id="@+id/Button00" android:height="65px" android:layout_weight="1"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="" android:visibility="invisible" android:id="@+id/ButtonHolder"></Button>
-</TableRow>
-</TableLayout>
-
-
-<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="15px"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24px" android:textStyle="bold" android:text="Clear" android:layout_weight="1" android:layout_marginLeft="10px" android:id="@+id/clearButton"></Button><Button android:layout_height="wrap_content" android:text="@string/unlock" android:layout_width="wrap_content" android:textSize="24px" android:id="@+id/unlockButton" android:textStyle="bold" android:layout_weight="1" android:layout_marginRight="10px" android:layout_marginLeft="35px"></Button></LinearLayout>
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:orientation="vertical">
+	<TextView android:id="@+id/TextView01" android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:text="@string/pin"
+		android:gravity="center_horizontal" android:textSize="16px"></TextView>
+	<TextView android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal"
+		android:id="@+id/invalidView" android:textSize="24px"
+		android:textStyle="bold" android:textColor="#ff0000"></TextView>
+	<EditText android:layout_height="wrap_content"
+		android:layout_width="fill_parent" android:layout_marginLeft="40px"
+		android:layout_marginRight="40px" android:id="@+id/pinEdit"
+		android:gravity="center" android:state_enabled="false"
+		android:clickable="false" android:focusable="false"
+		android:focusableInTouchMode="false" android:inputType="textPassword"></EditText>
+	<TableLayout android:id="@+id/TableLayout01"
+		android:layout_height="wrap_content" android:layout_width="fill_parent"
+		android:layout_marginLeft="15px" android:layout_marginRight="15px">
+		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
+			android:layout_width="fill_parent">
+			<Button android:id="@+id/Button01" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:text="1" android:tag="1"
+				android:typeface="normal" android:height="65px" android:textSize="24px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:id="@+id/Button02"
+				android:tag="2" android:text="2" android:typeface="normal"
+				android:height="65px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:tag="3"
+				android:text="3" android:typeface="normal" android:id="@+id/Button03"
+				android:height="65px"></Button>
+		</TableRow>
+		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
+			android:layout_width="fill_parent">
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:tag="4" android:text="4" android:id="@+id/Button04"
+				android:height="65px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:id="@+id/Button05" android:tag="5" android:text="5"
+				android:height="65px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:tag="6" android:text="6" android:id="@+id/Button06"
+				android:height="65px"></Button>
+		</TableRow>
+		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
+			android:layout_width="fill_parent">
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:id="@+id/Button07" android:tag="7" android:text="7"
+				android:height="65px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:text="8" android:tag="8" android:id="@+id/Button08"
+				android:height="65px"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:textStyle="bold" android:textSize="24px" android:typeface="normal"
+				android:id="@+id/Button09" android:tag="9" android:text="9"
+				android:height="65px"></Button>
+		</TableRow>
+		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
+			android:layout_width="fill_parent">
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:text="" android:visibility="invisible" android:id="@+id/ButtonHolder"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_marginLeft="5px"
+				android:layout_marginRight="5px" android:textStyle="bold"
+				android:textSize="24px" android:typeface="normal" android:text="0"
+				android:tag="0" android:id="@+id/Button00" android:height="65px"
+				android:layout_weight="1"></Button>
+			<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:layout_weight="1"
+				android:layout_marginLeft="5px" android:layout_marginRight="5px"
+				android:text="" android:visibility="invisible" android:id="@+id/ButtonHolder"></Button>
+		</TableRow>
+	</TableLayout>
+	<LinearLayout android:id="@+id/LinearLayout01"
+		android:layout_height="wrap_content" android:layout_width="fill_parent"
+		android:layout_marginTop="15px">
+		<Button android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:textSize="24px"
+			android:textStyle="bold" android:text="Clear" android:layout_weight="1"
+			android:layout_marginLeft="10px" android:id="@+id/clearButton"></Button>
+		<Button android:layout_height="wrap_content" android:text="@string/unlock"
+			android:layout_width="wrap_content" android:textSize="24px"
+			android:id="@+id/unlockButton" android:textStyle="bold"
+			android:layout_weight="1" android:layout_marginRight="10px"
+			android:layout_marginLeft="35px"></Button>
+	</LinearLayout>
 </LinearLayout>
